# tax-assistant

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/tax-assistant-core/: Cargo.toml
crates/tax-assistant-core/examples/: export-default-config.rs
crates/tax-assistant-core/src/: analysis.rs  config.rs  detection.rs  import.rs  lib.rs  model.rs  rules.rs
crates/tax-assistant-core/tests/: sample_fixture.rs
docs/: development-plan.md
fixtures/: sample-transactions.csv
src/: App.tsx  AutoDetectDialog.tsx  BillBookView.tsx  ConfigDialog.tsx  HelpDialog.tsx  demo.ts  fallbackConfig.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
