[workspace]
members = ["crates/tax-assistant-core", "src-tauri"]
resolver = "3"

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Dexter Lagan"]
repository = "https://github.com/DexterLagan/tax-assistant"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
