[package]
name = "tax-assistant"
description = "A local-first desktop assistant for tax preparation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tax_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tax-assistant-core = { path = "../crates/tax-assistant-core" }

[lints]
workspace = true
