[package]
name = "tax-assistant-core"
description = "Transaction importing, categorization, and reporting for Tax Assistant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
